--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@ body {
   margin: 0 auto;
   max-width: 50em;
   background-color: white;
-  font-family: "Roboto", "Helvetica", "Arial", sans-serif;
+  font-family: 'Roboto', 'Helvetica', 'Arial', sans-serif;
   padding: 4em 1em;
   color: #566b78;
 }
@@ -51,10 +51,11 @@ h1 {
 }
 header {
   background-color: #263d36;
-  /* background-image: url("./background.webp"); */
+  background-image: url('./background.jpg');
   background-position: center top;
   background-repeat: no-repeat;
   background-size: cover;
+  background-blend-mode: overlay;
   line-height: 1.2;
   padding: 10vw 2em;
   text-align: center;
@@ -64,6 +65,14 @@ header img {
   height: 120px;
   vertical-align: top;
   width: 120px;
+}
+header div {
+  margin-left: 45%;
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  background-color: red;
+  background-size : "cover";
 }
 header h1 {
   color: white;
@@ -85,7 +94,7 @@ header a {
 }
 
 header a:hover {
-  background:  #e81c4f;
+  background: #e81c4f;
   color: white;
 }
 h1,
@@ -109,10 +118,8 @@ code {
 pre {
   padding: 1em;
   border-left: 2px solid #69c;
-  
 }
 a {
   color: #e81c4f;
   cursor: pointer;
 }
-
