--- a/styles.css
+++ b/styles.css
@@ -51,7 +51,7 @@ h1 {
 }
 header {
   background-color: #263d36;
-  background-image: url('./background.jpg');
+  background-image: url('./hello.jpg');
   background-position: center top;
   background-repeat: no-repeat;
   background-size: cover;
